infra/local/kong/gateway-class.yaml
# Kong Gateway Class - defines Kong as the Gateway implementation
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong-config
    namespace: kong-system
